--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "firebase": "^9.6.8",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
